# r_uber_bot

./: .env.example  .gitignore  Cargo.toml  README.md  compose.yaml  rust.dockerfile  uberbot.db
bot/: Cargo.toml  rust.dockerfile
bot/.sqlx/: query-2689d4fbe68fdb5f569f6f840e0495e4fbe0ccc78ab5db42fa9cd7ebb64f55c6.json  query-45a8e32fc995162fc50754e7c1fd5015b8a582077649c2f222eb73ac567c907b.json  query-a4e819ad7e6b0e79fdb791ca8a043a4eeb6e955c3dc06be1f782e2b94c3c4ad6.json  query-a90980526c45049a0eb81ffbec1d99412fb5031937a173b0155e13f4b3b28817.json  query-b90856d1268b01617fb7ae4c2d144b061428214a77e349a848975b1019fcd2f1.json  query-f5aba9fbfac2f9e22487240e285148a2938a00150b09d51984a2dcf7b265b1b5.json
bot/migrations/: 20240617183500_guilds.sql  20240712033028_role_assign.sql  20240715023259_command_history.sql  guilds.sql
bot/src/: main.rs
bot/src/commands/: event_handler.rs  mod.rs  role_assign.rs  settings.rs  superhero.rs
bot/src/database/: db.rs  mod.rs  models.rs
bot/src/superhero_api/: mod.rs  model.rs
migrations/: 20240617183500_guilds.sql  20240712033028_role_assign.sql  20240715023259_command_history.sql  20240720000000_managed_roles.sql  20240721000000_active_menus.sql
src/: main.rs
src/commands/: age.rs  event_handler.rs  management.rs  misc.rs  mod.rs  role_assign.rs  superhero.rs
src/database/: db.rs  models.rs
src/superhero_api/: mod.rs  model.rs  superhero.rs  utils.rs
src/superheroapi/: mod.rs  model.rs  superhero.rs
