[package]
name = "r_uber_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
giphy = "0.4.1"
# giphy-api = "0.7.0"
once_cell = "1.18.0"
poise = "0.5.7"
rand = "0.8.5"
regex = "1.10.2"
reqwest = "0.11.22"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["rt-multi-thread"] }

# [patch.crates-io]
# giphy-api = { path = "../third-party-api-clients/giphy" }
