[package]
name = "r_uber_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
color-eyre = { version = "0.6.2", default-features = false }
const_panic = "0.2.8"
dotenvy = "0.15.7"
giphy = "0.4.1"
log = "0.4.22"
once_cell = "1.18.0"
poise = { version = "0.6.2", default-features = false, features = ["cache", "collector", "chrono", "handle_panics"] }
serenity = { version = "0.12", default-features = false, features = ["native_tls_backend", "default_no_backend"] }
pretty_env_logger = "0.5.0"
rand = "0.8.5"
rayon = "1.8.1"
regex = "1.10.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "native-tls", "json"] }
reqwest_0_11 = { package = "reqwest", version = "0.11.27", default-features = false, features = ["blocking", "native-tls", "json"] }
rstest = "0.18.2"
scraper = "0.26.0"
serde = "1.0.193"
serde-aux = "4.2.0"
serde_derive = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.2", default-features = false, features = ["sqlite", "runtime-tokio", "chrono", "macros", "migrate"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
